// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="boost-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Boost
        </div>
        <div
          className="sub-title"
        >
          Boost your post
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body flex flex-col"
    >
      <div
        className="align-self-center"
      >
        <a
          href="/faq#how-boosting-work"
        >
          Learn more about boosting
        </a>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Balance
        </label>
        <div
          className="col-sm-10"
        >
          <input
            className="balance-input form-control-plaintext"
            readOnly={true}
            value="500.000 POINTS"
          />
          
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Post
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <input
              className="form-control"
              disabled={false}
              onChange={[Function]}
              placeholder="username/permlink"
              type="text"
              value=""
            />
            <div />
          </div>
          
          <small
            className="text-gray-600 form-text"
          >
            Autocomplete input
          </small>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="slider-area"
          >
            <div
              className="slider-price"
            >
              1.000 $
              <small>
                150
                 POINTS
              </small>
            </div>
            <input
              className="custom-range"
              max={550}
              min={150}
              onChange={[Function]}
              step={50}
              type="range"
              value={150}
            />
            <small
              className="text-gray-600 form-text"
            >
              Drag the slider to adjust the amount.
            </small>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        />
        <div
          className="col-sm-10"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
          <small
            className="text-warning font-italic form-text"
          >
            Actual value of vote you receive may vary
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Insufficient Funds 1`] = `
<div
  className="boost-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Boost
        </div>
        <div
          className="sub-title"
        >
          Boost your post
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body flex flex-col"
    >
      <div
        className="align-self-center"
      >
        <a
          href="/faq#how-boosting-work"
        >
          Learn more about boosting
        </a>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Balance
        </label>
        <div
          className="col-sm-10"
        >
          <input
            className="balance-input is-invalid form-control-plaintext"
            readOnly={true}
            value="10.000 POINTS"
          />
          <small
            className="text-danger form-text"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Post
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <input
              className="form-control"
              disabled={false}
              onChange={[Function]}
              placeholder="username/permlink"
              type="text"
              value=""
            />
            <div />
          </div>
          
          <small
            className="text-gray-600 form-text"
          >
            Autocomplete input
          </small>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="slider-area"
          >
            <div
              className="slider-price"
            >
              1.000 $
              <small>
                150
                 POINTS
              </small>
            </div>
            <input
              className="custom-range"
              max={550}
              min={150}
              onChange={[Function]}
              step={50}
              type="range"
              value={150}
            />
            <small
              className="text-gray-600 form-text"
            >
              Drag the slider to adjust the amount.
            </small>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        />
        <div
          className="col-sm-10"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
          <small
            className="text-warning font-italic form-text"
          >
            Actual value of vote you receive may vary
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) With entry 1`] = `
<div
  className="boost-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Boost
        </div>
        <div
          className="sub-title"
        >
          Boost your post
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body flex flex-col"
    >
      <div
        className="align-self-center"
      >
        <a
          href="/faq#how-boosting-work"
        >
          Learn more about boosting
        </a>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Balance
        </label>
        <div
          className="col-sm-10"
        >
          <input
            className="balance-input form-control-plaintext"
            readOnly={true}
            value="500.000 POINTS"
          />
          
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Post
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="suggestion"
          >
            <input
              className="form-control"
              disabled={false}
              onChange={[Function]}
              placeholder="username/permlink"
              type="text"
              value=""
            />
            <div />
          </div>
          
          <small
            className="text-gray-600 form-text"
          >
            Autocomplete input
          </small>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        >
          Amount
        </label>
        <div
          className="col-sm-10"
        >
          <div
            className="slider-area"
          >
            <div
              className="slider-price"
            >
              1.000 $
              <small>
                150
                 POINTS
              </small>
            </div>
            <input
              className="custom-range"
              max={550}
              min={150}
              onChange={[Function]}
              step={50}
              type="range"
              value={150}
            />
            <small
              className="text-gray-600 form-text"
            >
              Drag the slider to adjust the amount.
            </small>
          </div>
        </div>
      </div>
      <div
        className="form-group row"
      >
        <label
          className="form-label col-form-label col-sm-2"
        />
        <div
          className="col-sm-10"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Next
          </button>
          <small
            className="text-warning font-italic form-text"
          >
            Actual value of vote you receive may vary
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
